# Automated-json-pipeline-snowflake-streams-tasks

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  MIGRATION_GUIDE.md  Makefile  OPTIMIZATION_DETAILS.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  sample_amazon_reviews.json  snowflake.txt  snowflake_optimized.sql
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml
docs/: ARCHITECTURE.md
scripts/: benchmark.py  check_env.py  export_metrics.py  generate_report.py  seed_data.py  validate_data.py
snowflake_pipeline/: __init__.py  aggregators.py  batch_processor.py  config.py  constants.py  deduplicator.py  exceptions.py  export.py  filters.py  io.py  metrics.py  pipeline.py  retry.py  sql_meta.py  transformers.py  utils.py  validators.py
snowflake_pipeline/data/: sample_amazon_reviews.json
snowflake_pipeline/sql/: snowflake_optimized.sql
tests/: conftest.py  test_aggregators.py  test_batch_processor.py  test_config.py  test_constants.py  test_deduplicator.py  test_exceptions.py  test_export.py  test_filters.py  test_generate_report.py  test_integration.py  test_io.py  test_metrics.py  test_pipeline.py  test_pipeline_orchestrator.py  test_retry.py  test_seed_data.py  test_sql_meta.py  test_transformers.py  test_utils.py  test_validate_data_script.py  test_validators.py
